crates/strider/tests/snapshots/v3__x86_kernel__builtins__main.snap
---
source: crates/strider/tests/v3_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "3" [label="const 0x4010f0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "1" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "4" [label="const 0xdeadbeef:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "5" -> "1" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "6" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "1" -> "6" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "7" -> "6" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "8" -> "6" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "8" [label="const 0x401130:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "9" -> "6" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "9" [label="const 0x10000:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "v10" [label="Post Call\nEDX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v10" [color="#888888", style=dashed];
  "v10" -> "6" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "11" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "6" -> "11" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "12" -> "11" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "13" -> "11" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "13" [label="const 0x401140:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "14" -> "11" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "14" [label="const 0x10000:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "v15" [label="Post Call\nEDX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "6" -> "v15" [color="#888888", style=dashed];
  "v15" -> "11" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "16" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "11" -> "16" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "17" -> "16" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "18" -> "16" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "18" [label="const 0x401150:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "19" -> "16" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "19" [label="const 0xcafebabe:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "20" -> "16" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "20" [label="const 0xdeadbeef:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "21" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "16" -> "21" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "22" -> "21" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "23" -> "21" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "23" [label="const 0x4011c0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "24" -> "21" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "24" [label="const 0x10000:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "25" -> "21" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "25" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "26" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "21" -> "26" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "27" -> "26" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "28" -> "26" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "28" [label="const 0x4011e0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "29" -> "26" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "29" [label="const 0x32:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "v30" [label="Post Call\nEDX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "21" -> "v30" [color="#888888", style=dashed];
  "v30" -> "26" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "31" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "26" -> "31" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "32" -> "31" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "33" -> "31" [color="#88cc88", label=EAX, fontcolor="#cccccc", fontsize=9];
  "v34" [label="Post Call\nEDX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "26" -> "v34" [color="#888888", style=dashed];
  "v34" -> "31" [color="#88cc88", label=EDX, fontcolor="#cccccc", fontsize=9];
  "v35" [label="Post Call\nST0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "26" -> "v35" [color="#888888", style=dashed];
  "v35" -> "31" [color="#88cc88", label=ST0, fontcolor="#cccccc", fontsize=9];
  "v36" [label="Post Call\nXMM0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "26" -> "v36" [color="#888888", style=dashed];
  "v36" -> "31" [color="#88cc88", label=XMM0, fontcolor="#cccccc", fontsize=9];
  "33" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "37" -> "33" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v38" [label="Post Call\nEAX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "26" -> "v38" [color="#888888", style=dashed];
  "v38" -> "33" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "37" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "26" -> "37" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "39" -> "37" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "39" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "40" -> "39" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "41" -> "39" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "41" [label="const 0xfffffffc:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "40" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "32" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "26" -> "32" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v42" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v42" -> "32" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "33" -> "32" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "27" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "43" -> "27" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v44" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v44" -> "27" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "45" -> "27" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "45" [label="const 0x401252:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "43" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "21" -> "43" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v46" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v46" -> "43" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "47" -> "43" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "47" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "48" -> "47" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v49" [label="Post Call\nEAX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "21" -> "v49" [color="#888888", style=dashed];
  "v49" -> "47" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "48" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "21" -> "48" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "50" -> "48" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "50" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "40" -> "50" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "51" -> "50" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "51" [label="const 0xfffffffc:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "22" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "52" -> "22" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v53" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v53" -> "22" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "54" -> "22" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "54" [label="const 0x401244:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "52" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "16" -> "52" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v55" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v55" -> "52" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "56" -> "52" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "56" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "57" -> "56" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v58" [label="Post Call\nEAX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "16" -> "v58" [color="#888888", style=dashed];
  "v58" -> "56" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "57" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "16" -> "57" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "50" -> "57" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "17" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "59" -> "17" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v60" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v60" -> "17" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "61" -> "17" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "61" [label="const 0x401234:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "59" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "11" -> "59" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v62" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v62" -> "59" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "63" -> "59" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "63" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "64" -> "63" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v65" [label="Post Call\nEAX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "11" -> "v65" [color="#888888", style=dashed];
  "v65" -> "63" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "64" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "11" -> "64" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "50" -> "64" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "12" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "66" -> "12" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v67" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v67" -> "12" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "68" -> "12" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "68" [label="const 0x401221:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "66" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "6" -> "66" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v69" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v69" -> "66" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "70" -> "66" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "70" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "71" -> "70" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v72" [label="Post Call\nEAX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "6" -> "v72" [color="#888888", style=dashed];
  "v72" -> "70" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "71" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "6" -> "71" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "50" -> "71" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "7" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "73" -> "7" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v74" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v74" -> "7" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "75" -> "7" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "75" [label="const 0x401213:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "73" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "1" -> "73" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v76" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v76" -> "73" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "77" -> "73" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "77" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "78" -> "77" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v79" [label="Post Call\nEAX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v79" [color="#888888", style=dashed];
  "v79" -> "77" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "78" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "1" -> "78" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "50" -> "78" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "5" [label="arg[1] ← EDX", shape=Mdiamond, fillcolor="#1a3a5c"];
  "2" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "80" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v81" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v81" -> "2" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "82" -> "2" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "82" [label="const 0x401205:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "80" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "83" -> "80" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v84" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v84" -> "80" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "85" -> "80" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "85" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "83" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
